--- a/export_code/CMakeLists.txt
+++ b/export_code/CMakeLists.txt
@@ -10,6 +10,8 @@ target_include_directories(app PRIVATE src/generated src/custom src/generated/gu
 target_sources(app PRIVATE ${app_sources})
 target_compile_definitions(app PRIVATE LV_LVGL_H_INCLUDE_SIMPLE)
 
+target_sources_ifdef(CONFIG_FLASH_STM32_QSPI app PRIVATE boards/stm32f746g_disco/ext_mem_init.c)
+
 # Run ext_code from the external flash (XIP). No need to copy.
 zephyr_code_relocate(FILES src/generated/images/_slider_0_alpha_800x80.c LOCATION EXTFLASH_TEXT NOCOPY)
 
