--- a/export_code/boards/stm32f746g_disco.conf
+++ b/export_code/boards/stm32f746g_disco.conf
@@ -14,12 +14,14 @@ CONFIG_XIP=y
 CONFIG_FLASH=y
 CONFIG_FLASH_STM32_QSPI=y
 CONFIG_ARM_MPU=n
+#CONFIG_INPUT_FT5336_INTERRUPT=n
+#CONFIG_INPUT_FT5336_PERIOD=100
 
 CONFIG_LVGL=y
 CONFIG_LV_Z_MEM_POOL_SIZE=16384
 CONFIG_LV_Z_USE_FILESYSTEM=y
 CONFIG_LV_MEM_CUSTOM=y
-CONFIG_LV_USE_LOG=y
+CONFIG_LV_USE_LOG=n
 CONFIG_LV_COLOR_DEPTH_16=y
 CONFIG_LV_COLOR_SCREEN_TRANSP=y
 CONFIG_LV_USE_BIDI=y
