--- a/export_code/boards/stm32f746g_disco.conf
+++ b/export_code/boards/stm32f746g_disco.conf
@@ -88,3 +88,24 @@ CONFIG_LV_USE_FONT_SUBPX=y
 
 CONFIG_DEBUG_OPTIMIZATIONS=n
 #CONFIG_LV_USE_GPU_STM32_DMA2D=y
+
+CONFIG_LOG=n
+CONFIG_GPIO=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_UART_LINE_CTRL=n
+CONFIG_MODBUS=y
+#CONFIG_MODBUS_ROLE_CLIENT=y
+CONFIG_MODBUS_ROLE_SERVER=y
+CONFIG_CONSOLE=n
+CONFIG_TEST=y
+CONFIG_CPLUSPLUS=y
+CONFIG_LIB_CPLUSPLUS=y
+CONFIG_STD_CPP20=y
+CONFIG_NEWLIB_LIBC=y
+CONFIG_NEWLIB_LIBC_NANO=y
+CONFIG_SPEED_OPTIMIZATIONS=y
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=n
+CONFIG_CBPRINTF_FP_SUPPORT=n
+CONFIG_HEAP_MEM_POOL_SIZE=4096
+CONFIG_MAIN_STACK_SIZE=4096
+
