--- a/export_code/boards/stm32f746g_disco.conf
+++ b/export_code/boards/stm32f746g_disco.conf
@@ -18,12 +18,12 @@ CONFIG_ARM_MPU=n
 #CONFIG_INPUT_FT5336_PERIOD=100
 
 CONFIG_LVGL=y
-CONFIG_LV_Z_MEM_POOL_SIZE=16384
+CONFIG_LV_Z_MEM_POOL_SIZE=48000
 CONFIG_LV_Z_USE_FILESYSTEM=y
 CONFIG_LV_MEM_CUSTOM=y
 CONFIG_LV_USE_LOG=n
 CONFIG_LV_COLOR_DEPTH_16=y
-CONFIG_LV_COLOR_SCREEN_TRANSP=y
+CONFIG_LV_COLOR_SCREEN_TRANSP=n
 CONFIG_LV_USE_BIDI=y
 CONFIG_LV_USE_ARABIC_PERSIAN_CHARS=y
 CONFIG_LV_USE_LABEL=y
@@ -83,10 +83,12 @@ CONFIG_LV_FONT_MONTSERRAT_28_COMPRESSED=y
 CONFIG_LV_FONT_DEJAVU_16_PERSIAN_HEBREW=y
 CONFIG_LV_FONT_SIMSUN_16_CJK=y
 CONFIG_LV_FONT_UNSCII_8=y
-CONFIG_LV_USE_FONT_COMPRESSED=y
+CONFIG_LV_USE_FONT_COMPRESSED=n
 CONFIG_LV_USE_FONT_SUBPX=y
 
 CONFIG_DEBUG_OPTIMIZATIONS=n
+
+#CONFIG_LV_GPU_DMA2D_CMSIS_INCLUDE="stm32f7xx.h"
 #CONFIG_LV_USE_GPU_STM32_DMA2D=y
 
 CONFIG_LOG=n
@@ -107,5 +109,5 @@ CONFIG_SPEED_OPTIMIZATIONS=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=n
 CONFIG_CBPRINTF_FP_SUPPORT=n
 CONFIG_HEAP_MEM_POOL_SIZE=4096
-CONFIG_MAIN_STACK_SIZE=4096
+
 
