--- a/export_code/boards/stm32f746g_disco.conf
+++ b/export_code/boards/stm32f746g_disco.conf
@@ -1,8 +1,5 @@
 
-CONFIG_MAIN_STACK_SIZE=8192
-
-CONFIG_DISPLAY=y
-CONFIG_DISPLAY_LOG_LEVEL_ERR=y
+CONFIG_MAIN_STACK_SIZE=4096
 
 CONFIG_CODE_DATA_RELOCATION=y
 CONFIG_HAVE_CUSTOM_LINKER_SCRIPT=y
@@ -16,87 +13,31 @@ CONFIG_FLASH_STM32_QSPI=y
 CONFIG_ARM_MPU=n
 #CONFIG_INPUT_FT5336_INTERRUPT=n
 #CONFIG_INPUT_FT5336_PERIOD=100
+CONFIG_LV_USE_PERF_MONITOR=y
+CONFIG_LV_PERF_MONITOR_ALIGN_TOP_RIGHT=y
+#CONFIG_LV_USE_MEM_MONITOR=y
 
-CONFIG_LVGL=y
-CONFIG_LV_Z_MEM_POOL_SIZE=48000
-CONFIG_LV_Z_USE_FILESYSTEM=y
-CONFIG_LV_MEM_CUSTOM=y
-CONFIG_LV_USE_LOG=n
+CONFIG_LV_USE_MONKEY=y
+
+CONFIG_LV_Z_MEM_POOL_SYS_HEAP=y
+CONFIG_LV_Z_MEM_POOL_HEAP_LIB_C=y
+
 CONFIG_LV_COLOR_DEPTH_16=y
-CONFIG_LV_COLOR_SCREEN_TRANSP=n
-CONFIG_LV_USE_BIDI=y
-CONFIG_LV_USE_ARABIC_PERSIAN_CHARS=y
-CONFIG_LV_USE_LABEL=y
-CONFIG_LV_LABEL_TEXT_SELECTION=y
-CONFIG_LV_LABEL_LONG_TXT_HINT=y
-CONFIG_LV_USE_IMG=y
-CONFIG_LV_USE_LINE=y
-CONFIG_LV_USE_ARC=y
-CONFIG_LV_USE_WIN=y
-CONFIG_LV_USE_TABVIEW=y
-CONFIG_LV_USE_TILEVIEW=y
-CONFIG_LV_USE_CALENDAR=y
-CONFIG_LV_CALENDAR_WEEK_STARTS_MONDAY=y
-CONFIG_LV_USE_SPINNER=y
-CONFIG_LV_USE_CANVAS=y
-CONFIG_LV_USE_BAR=y
-CONFIG_LV_USE_CHART=y
-CONFIG_LV_USE_TABLE=y
-CONFIG_LV_USE_LED=y
-CONFIG_LV_USE_MSGBOX=y
-CONFIG_LV_USE_TEXTAREA=y
-CONFIG_LV_USE_SPINBOX=y
-CONFIG_LV_USE_BTN=y
-CONFIG_LV_USE_IMGBTN=y
-CONFIG_LV_USE_BTNMATRIX=y
-CONFIG_LV_USE_KEYBOARD=y
-CONFIG_LV_USE_CHECKBOX=y
-CONFIG_LV_USE_LIST=y
-CONFIG_LV_USE_DROPDOWN=y
-CONFIG_LV_USE_ROLLER=y
-CONFIG_LV_USE_SLIDER=y
-CONFIG_LV_USE_SWITCH=y
-CONFIG_LV_USE_LED=y
-CONFIG_LV_FONT_MONTSERRAT_8=y
-CONFIG_LV_FONT_MONTSERRAT_10=y
-CONFIG_LV_FONT_MONTSERRAT_12=y
-CONFIG_LV_FONT_MONTSERRAT_14=y
-CONFIG_LV_FONT_MONTSERRAT_16=y
-CONFIG_LV_FONT_MONTSERRAT_18=y
-CONFIG_LV_FONT_MONTSERRAT_20=y
-CONFIG_LV_FONT_MONTSERRAT_22=y
-CONFIG_LV_FONT_MONTSERRAT_24=y
-CONFIG_LV_FONT_MONTSERRAT_26=y
-CONFIG_LV_FONT_MONTSERRAT_28=y
-CONFIG_LV_FONT_MONTSERRAT_30=y
-CONFIG_LV_FONT_MONTSERRAT_32=y
-CONFIG_LV_FONT_MONTSERRAT_34=y
-CONFIG_LV_FONT_MONTSERRAT_36=y
-CONFIG_LV_FONT_MONTSERRAT_38=y
-CONFIG_LV_FONT_MONTSERRAT_40=y
-CONFIG_LV_FONT_MONTSERRAT_42=y
-CONFIG_LV_FONT_MONTSERRAT_44=y
-CONFIG_LV_FONT_MONTSERRAT_46=y
-CONFIG_LV_FONT_MONTSERRAT_48=y
-CONFIG_LV_FONT_MONTSERRAT_12_SUBPX=y
-CONFIG_LV_FONT_MONTSERRAT_28_COMPRESSED=y
-CONFIG_LV_FONT_DEJAVU_16_PERSIAN_HEBREW=y
-CONFIG_LV_FONT_SIMSUN_16_CJK=y
-CONFIG_LV_FONT_UNSCII_8=y
-CONFIG_LV_USE_FONT_COMPRESSED=n
-CONFIG_LV_USE_FONT_SUBPX=y
+CONFIG_DEBUG_OPTIMIZATIONS=y
 
-CONFIG_DEBUG_OPTIMIZATIONS=n
-
+#CONFIG_DMA=y
 #CONFIG_LV_GPU_DMA2D_CMSIS_INCLUDE="stm32f7xx.h"
 #CONFIG_LV_USE_GPU_STM32_DMA2D=y
+#CONFIG_LV_DISP_DEF_REFR_PERIOD=60
+#CONFIG_LV_INDEV_DEF_READ_PERIOD=100
+#CONFIG_LV_THEME_DEFAULT_TRANSITION_TIME=80
 
 CONFIG_LOG=n
 CONFIG_GPIO=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_UART_LINE_CTRL=n
 CONFIG_MODBUS=y
-#CONFIG_MODBUS_ROLE_CLIENT=y
+##CONFIG_MODBUS_ROLE_CLIENT=y
 CONFIG_MODBUS_ROLE_SERVER=y
 CONFIG_CONSOLE=n
 CONFIG_TEST=y
@@ -105,9 +46,8 @@ CONFIG_LIB_CPLUSPLUS=y
 CONFIG_STD_CPP20=y
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_NANO=y
-CONFIG_SPEED_OPTIMIZATIONS=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=n
 CONFIG_CBPRINTF_FP_SUPPORT=n
-CONFIG_HEAP_MEM_POOL_SIZE=8192
+CONFIG_HEAP_MEM_POOL_SIZE=65536
 
 
