--- a/export_code/boards/stm32f746g_disco.conf
+++ b/export_code/boards/stm32f746g_disco.conf
@@ -17,7 +17,7 @@ CONFIG_LV_USE_PERF_MONITOR=y
 CONFIG_LV_PERF_MONITOR_ALIGN_TOP_RIGHT=y
 #CONFIG_LV_USE_MEM_MONITOR=y
 
-CONFIG_LV_USE_MONKEY=y
+# CONFIG_LV_USE_MONKEY=y
 
 CONFIG_LV_Z_MEM_POOL_SYS_HEAP=y
 CONFIG_LV_Z_MEM_POOL_HEAP_LIB_C=y
@@ -25,9 +25,9 @@ CONFIG_LV_Z_MEM_POOL_HEAP_LIB_C=y
 CONFIG_LV_COLOR_DEPTH_16=y
 CONFIG_DEBUG_OPTIMIZATIONS=y
 
-#CONFIG_DMA=y
-#CONFIG_LV_GPU_DMA2D_CMSIS_INCLUDE="stm32f7xx.h"
-#CONFIG_LV_USE_GPU_STM32_DMA2D=y
+# CONFIG_DMA=y
+# CONFIG_LV_GPU_DMA2D_CMSIS_INCLUDE="stm32f7xx.h"
+# CONFIG_LV_USE_GPU_STM32_DMA2D=y
 #CONFIG_LV_DISP_DEF_REFR_PERIOD=60
 #CONFIG_LV_INDEV_DEF_READ_PERIOD=100
 #CONFIG_LV_THEME_DEFAULT_TRANSITION_TIME=80
