--- a/export_code/boards/stm32f746g_disco.conf
+++ b/export_code/boards/stm32f746g_disco.conf
@@ -23,7 +23,7 @@ CONFIG_LV_Z_MEM_POOL_SYS_HEAP=y
 CONFIG_LV_Z_MEM_POOL_HEAP_LIB_C=y
 
 CONFIG_LV_COLOR_DEPTH_16=y
-CONFIG_DEBUG_OPTIMIZATIONS=y
+CONFIG_DEBUG_OPTIMIZATIONS=n
 
 # CONFIG_DMA=y
 # CONFIG_LV_GPU_DMA2D_CMSIS_INCLUDE="stm32f7xx.h"
@@ -31,6 +31,7 @@ CONFIG_DEBUG_OPTIMIZATIONS=y
 #CONFIG_LV_DISP_DEF_REFR_PERIOD=60
 #CONFIG_LV_INDEV_DEF_READ_PERIOD=100
 #CONFIG_LV_THEME_DEFAULT_TRANSITION_TIME=80
+#CONFIG_LV_Z_VBD_CUSTOM_SECTION=y
 
 CONFIG_LOG=n
 CONFIG_GPIO=y
@@ -48,6 +49,7 @@ CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_NANO=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=n
 CONFIG_CBPRINTF_FP_SUPPORT=n
+# CONFIG_SPEED_OPTIMIZATIONS=y
 CONFIG_HEAP_MEM_POOL_SIZE=65536
 
 
