--- a/export_code/boards/stm32f746g_disco.conf
+++ b/export_code/boards/stm32f746g_disco.conf
@@ -13,7 +13,7 @@ CONFIG_FLASH_STM32_QSPI=y
 CONFIG_ARM_MPU=n
 #CONFIG_INPUT_FT5336_INTERRUPT=n
 #CONFIG_INPUT_FT5336_PERIOD=100
-CONFIG_LV_USE_PERF_MONITOR=y
+#CONFIG_LV_USE_PERF_MONITOR=y
 CONFIG_LV_PERF_MONITOR_ALIGN_TOP_RIGHT=y
 #CONFIG_LV_USE_MEM_MONITOR=y
 
