--- a/export_code/.vscode/settings.json
+++ b/export_code/.vscode/settings.json
@@ -70,5 +70,5 @@
       "pan_procces.h": "c",
       "events_init.h": "c"
    },
-   "cortex-debug.variableUseNaturalFormat": false,
+   "cortex-debug.variableUseNaturalFormat": true,
 }
